# databridgeai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DataBridgeAI.md  README.md  middleware.ts  package.json  pnpm-lock.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-ontology-management/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-data-dictionary/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.template  Dockerfile  deploy.sh  main.py  owl_generator.py  pyproject.toml
backend/tests/: conftest.py  test_owl_generator.py
src/app/: layout.tsx  page.tsx
src/components/: app-sidebar.tsx  health-indicator.tsx
src/lib/: constants.ts  google-auth.ts
src/types/: cytoscape-plugins.d.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_ontology_schema.sql  002_dictionary_schema.sql
tests/unit/: constants.test.ts  health-indicator.test.ts
(+102 files in other folders)
