[project]
name = "databridgeai-cognee"
version = "0.1.0"
description = "DataBridgeAI Cognee backend service"
requires-python = ">=3.12"
dependencies = [
    "cognee>=0.5.5,<0.6.0",
    "rdflib>=7.0.0,<8.0.0",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

